--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "obol-sdk",
   "private": true,
   "scripts": {
+    "temp": "tsc bia-restitution.ts && node bia-restitution.js",
     "lerna-build": "lerna run build",
     "eslint": "eslint . --ext '.ts,.tsx'",
     "eslint:fix": "eslint . --ext '.ts,.tsx' --fix",
@@ -28,5 +29,8 @@
     "prettier": "2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@0xsplits/splits-sdk": "^2.7.0"
   }
 }
