--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prettier": "2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "ethers": "^6.4.0"
   }
 }
