--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.7",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "@chainsafe/ssz": "^0.11.1",
-    "ethers": "^6.4.0"
+    "ethers": "^6.4.0",
+    "uuid": "^9.0.0"
   }
 }
