--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,8 @@
 {
   "useWorkspaces": true,
-  "npmClient": "yarn",
-  "version": "independent"
+  "npmClient": "npm",
+  "version": "independent",
+  "packages": [
+    "packages/*"
+  ]
 }
