--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@chainsafe/ssz": "^0.11.1",
-    "ethers": "^6.4.0",
-    "uuid": "^9.0.0"
+    "ethers": "^6.4.0"
   }
 }
