--- a/packages/obol-sdk/package.json
+++ b/packages/obol-sdk/package.json
@@ -10,7 +10,8 @@
     "ethereum"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "test": "jest"
   },
   "author": "Obol Labs (https://obol.tech)",
   "publishConfig": {
@@ -32,7 +33,11 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@types/ajv": "^1.0.0",
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "babel-jest": "^29.5.0"
   }
 }
