--- a/packages/obol-sdk/package.json
+++ b/packages/obol-sdk/package.json
@@ -30,7 +30,8 @@
     "@chainsafe/ssz": "^0.11.1",
     "ajv": "^8.12.0",
     "cross-fetch": "^3.1.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ethers": "^6.4.0"
   },
   "devDependencies": {
     "@types/ajv": "^1.0.0",
