--- a/package.json
+++ b/package.json
@@ -1,36 +1,92 @@
 {
-  "name": "obol-sdk",
-  "private": true,
-  "scripts": {
-    "lerna-build": "lerna run build",
-    "eslint": "eslint . --ext '.ts,.tsx'",
-    "eslint:fix": "eslint . --ext '.ts,.tsx' --fix",
-    "prettier": "prettier --check --config .prettierrc './**/src/*.{.js,jsx,ts,tsx}'",
-    "prettier:fix": "prettier --config .prettierrc './**/src/*.{.js,jsx,ts,tsx}' --write",
-    "lerna-version": "lerna version --no-private"
+  "name": "@obolnetwork/obol-sdk",
+  "version": "1.0.8",
+  "description": "A package for creating Distributed Validators using the Obol API.",
+  "bugs": {
+    "url": "https://github.com/obolnetwork/obol-packages/issues"
   },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
+  "homepage": "https://docs.obol.tech/",
+  "keywords": [
+    "Obol",
+    "Distributed Validators",
+    "Ethereum"
+  ],
+  "scripts": {
+    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json",
+    "build:clean": "rm -rf ./dist",
+    "build": "npm-run-all build:clean compile && node ./esm-package-json",
+    "test": "jest",
+    "generate-typedoc": "typedoc",
+    "ds:release:major": "npm version $(semver $npm_package_version -i major) && npm publish --tag latest",
+    "ds:release:minor": "npm version $(semver $npm_package_version -i minor) && npm publish --tag latest",
+    "ds:release:patch": "npm version $(semver $npm_package_version -i patch) && npm publish --tag latest"
+  },
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "index.d.ts",
+  "exports": {
+    "./*": {
+      "require": "./dist/cjs/*.js",
+      "import": "./dist/esm/*.js",
+      "default": "./dist/esm/*.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "author": "Obol Labs (https://obol.tech)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/obolnetwork/obol-packages.git"
+  },
+  "license": "ISC",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
+  "dependencies": {
+    "@chainsafe/ssz": "^0.11.1",
+    "ajv": "^8.12.0",
+    "cross-fetch": "^3.1.5",
+    "ethers": "^6.4.0",
+    "nock": "^13.5.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-no-loops": "^0.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@types/node": "^20.2.5",
+    "@types/uuid": "^9.0.1",
+    "eslint": "^8.6.0",
+    "fetch-mock": "^9.11.0",
     "jest": "^28.1.3",
-    "lerna": "^6.4.0",
-    "prettier": "2.7.1",
-    "supertest": "^6.3.3",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.7.4"
+    "tsup": "^6.7.0",
+    "typedoc": "^0.25.7",
+    "typedoc-plugin-markdown": "^4.0.0-next.50",
+    "typescript": "^5.3.3"
   },
-  "dependencies": {
-    "ethers": "^6.4.0"
+  "engines": {
+    "node": ">= 16"
+  },
+  "files": [
+    "package.json",
+    "README.md",
+    "dist",
+    "src"
+  ],
+  "jest": {
+    "transform": {
+      "\\.[jt]sx?$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "useESM": true
+      }
+    },
+    "moduleNameMapper": {
+      "(.+)\\.js": "$1"
+    },
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ]
   }
 }
