--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2016"
-    ],
-    "outDir": "./dist",
-    "allowJs": false,
-    "skipLibCheck": true,
-    "strict": true,
+    "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+    "strict": false /* Enable all strict type-checking options. */,
+    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
     "declaration": true,
-    "sourceMap": true,
-    "noUnusedParameters": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
+    "emitDeclarationOnly": true,
+    "module": "amd",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx",
-    "incremental": true
   }
 }
