--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@obolnetwork/obol-sdk",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A package for creating Distributed Validators using the Obol API.",
   "bugs": {
     "url": "https://github.com/obolnetwork/obol-packages/issues"
@@ -35,14 +35,20 @@
     "access": "public"
   },
   "dependencies": {
-    "@chainsafe/ssz": "^0.11.1",
+    "@chainsafe/bls": "6.0.3",
+    "@chainsafe/blst": "^0.2.9",
+    "@chainsafe/discv5": "^0.5.1",
+    "@chainsafe/ssz": "^0.14.0",
+    "@metamask/eth-sig-util": "^7.0.1",
     "ajv": "^8.12.0",
     "cross-fetch": "^3.1.5",
+    "elliptic": "^6.5.4",
     "ethers": "^6.4.0",
     "nock": "^13.5.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/elliptic": "^6.4.18",
     "@types/jest": "^28.1.8",
     "@types/node": "^20.2.5",
     "@types/uuid": "^9.0.1",
@@ -75,6 +81,9 @@
       }
     },
     "moduleNameMapper": {
+      "^bn.js$": "<rootDir>/node_modules/bn.js",
+      "^asn1.js$": "<rootDir>/node_modules/asn1.js",
+      "^hash.js$": "<rootDir>/node_modules/hash.js",
       "(.+)\\.js": "$1"
     },
     "extensionsToTreatAsEsm": [
