--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "strict": false /* Enable all strict type-checking options. */,
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
-    "moduleResolution":"node"
-  }
+    "moduleResolution":"node",
+  },
+  "exclude": ["node_modules", "dist", "test/sdk-package-test"]
 }
