--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@obolnetwork/obol-sdk",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A package for creating Distributed Validators using the Obol API.",
   "bugs": {
     "url": "https://github.com/obolnetwork/obol-packages/issues"
@@ -53,8 +53,8 @@
     "@types/node": "^20.2.5",
     "@types/uuid": "^9.0.1",
     "eslint": "^8.6.0",
-    "fetch-mock": "^9.11.0",
     "jest": "^28.1.3",
+    "msw": "^2.2.1",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^28.0.8",
     "tsup": "^6.7.0",
