--- a/.github/workflows/build-deploy-obol-sdk.yml
+++ b/.github/workflows/build-deploy-obol-sdk.yml
@@ -21,7 +21,7 @@ jobs:
 
       - run: yarn install --frozen-lockfile
 
-      - run: yarn run ds:build
+      - run: yarn run build
 
       - run: yarn run generate-typedoc 
 
