--- a/.github/workflows/build-deploy-obol-sdk.yml
+++ b/.github/workflows/build-deploy-obol-sdk.yml
@@ -22,16 +22,35 @@ jobs:
 
       - name: Configure git
         run: |
-          git config user.email "platform@obol.tech"
-          git config user.name "Obol Platform"
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
+      # - name: get-npm-version
+      #   id: package-version
+      #   uses: martinbeentjes/npm-get-version-action@main
+
+      # ############# TAG RELEASE ##############
+      # - name: "Push tag v${{ steps.package-version.outputs.current-version }}"
+      #   uses: rickstaa/action-create-tag@v1
+      #   id: tag_version
+      #   with:
+      #     tag: "v${{ steps.package-version.outputs.current-version }}"
+      
+      # ############# GITHUB RELEASE ##############
+      # - name: "Create a GitHub release v${{ steps.package-version.outputs.current-version }}"
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     tag: "v${{ steps.package-version.outputs.current-version }}"
+      #     name: "Release v${{ steps.package-version.outputs.current-version }}"
+      #     body: |
+      #       ## Release notes:
+      #       ${{ steps.extract-release-notes.outputs.release_notes }}
+      
+      ############# NPM RELEASE ##############
       - run: yarn install --frozen-lockfile
-
       - run: yarn run build
-
       - run: yarn run generate-typedoc 
-
-      - run: yarn run ds:release:patch
+      - run: yarn run ds:release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           HUSKY: 0
