--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "npm-run-all build:clean compile",
     "test": "jest ./test/methods.test.ts",
     "generate-typedoc": "typedoc",
+    "ds:release": "npm publish --tag latest",
     "ds:release:major": "npm version $(semver $npm_package_version -i major) && npm publish --tag latest",
     "ds:release:minor": "npm version $(semver $npm_package_version -i minor) && npm publish --tag latest",
     "ds:release:patch": "npm version $(semver $npm_package_version -i patch) && npm publish --tag latest"
