--- a/.github/workflows/build-deploy-obol-sdk.yml
+++ b/.github/workflows/build-deploy-obol-sdk.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged == true && github.event.pull_request.head.label == 'obol-sdk:release')
     runs-on: ubuntu-latest
 
     steps:
@@ -25,26 +26,30 @@ jobs:
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
-      # - name: get-npm-version
-      #   id: package-version
-      #   uses: martinbeentjes/npm-get-version-action@main
+      - name: get-npm-version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@main
 
-      # ############# TAG RELEASE ##############
-      # - name: "Push tag v${{ steps.package-version.outputs.current-version }}"
-      #   uses: rickstaa/action-create-tag@v1
-      #   id: tag_version
-      #   with:
-      #     tag: "v${{ steps.package-version.outputs.current-version }}"
+      - name: Extract release notes
+        id: extract-release-notes
+        uses: ffurrer2/extract-release-notes@v1
+
+      ############# TAG RELEASE ##############
+      - name: "Push tag v${{ steps.package-version.outputs.current-version }}"
+        uses: rickstaa/action-create-tag@v1
+        id: tag_version
+        with:
+          tag: "v${{ steps.package-version.outputs.current-version }}"
       
-      # ############# GITHUB RELEASE ##############
-      # - name: "Create a GitHub release v${{ steps.package-version.outputs.current-version }}"
-      #   uses: ncipollo/release-action@v1
-      #   with:
-      #     tag: "v${{ steps.package-version.outputs.current-version }}"
-      #     name: "Release v${{ steps.package-version.outputs.current-version }}"
-      #     body: |
-      #       ## Release notes:
-      #       ${{ steps.extract-release-notes.outputs.release_notes }}
+      ############# GITHUB RELEASE ##############
+      - name: "Create a GitHub release v${{ steps.package-version.outputs.current-version }}"
+        uses: ncipollo/release-action@v1
+        with:
+          tag: "v${{ steps.package-version.outputs.current-version }}"
+          name: "Release v${{ steps.package-version.outputs.current-version }}"
+          body: |
+            ## Release notes:
+            ${{ steps.extract-release-notes.outputs.release_notes }}
       
       ############# NPM RELEASE ##############
       - run: yarn install --frozen-lockfile
