--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "build": "npm-run-all build:clean compile",
     "test": "jest ./test/methods.test.ts",
     "generate-typedoc": "typedoc",
-    "ds:release": "npm publish --tag latest",
-    "ds:release:major": "npm version $(semver $npm_package_version -i major) && npm publish --tag latest",
-    "ds:release:minor": "npm version $(semver $npm_package_version -i minor) && npm publish --tag latest",
-    "ds:release:patch": "npm version $(semver $npm_package_version -i patch) && npm publish --tag latest"
+    "release": "release-it",
+    "release:dry": "release-it --dry-run --no-npm"
   },
   "main": "./dist/cjs/src/index.js",
   "module": "./dist/esm/src/index.js",
@@ -46,6 +44,7 @@
     "elliptic": "^6.5.4",
     "ethers": "^6.4.0",
     "nock": "^13.5.3",
+    "release-it": "^17.1.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
