--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -30,11 +30,14 @@ jobs:
           node-version: 18.x
           cache: npm
 
+      - name: Install dependancies
+        run: yarn install --frozen-lockfile
+
       - name: Prepare release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TYPE_ARG: ${{ fromJSON('{"auto":"", "patch":"patch", "minor":"minor", "major":"major"}')[github.event.inputs.type] }}
-        run: npm run release -- $TYPE_ARG --ci --verbose --no-git.push --no-git.commit --no-git.tag --no-github
+        run: yarn run release -- $TYPE_ARG --ci --verbose --no-git.push --no-git.commit --no-git.tag --no-github
       
       - name: Show git status
         if: failure()
@@ -47,12 +50,6 @@ jobs:
       - name: Extract release notes
         id: extract-release-notes
         uses: ffurrer2/extract-release-notes@v1
-
-      - name: Generate PR body
-        id: body
-        uses: mathiasvr/command-output@v1
-        with:
-          run: node ./bin/pr.js
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
