--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@obolnetwork/obol-sdk",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "A package for creating Distributed Validators using the Obol API.",
   "bugs": {
     "url": "https://github.com/obolnetwork/obol-sdk/issues"
@@ -81,6 +81,7 @@
   ],
   "release-it": {
     "git": {
+      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs",
       "commitMessage": "chore(release): v${version}",
       "push": true,
       "commit": true,
@@ -96,12 +97,8 @@
       "publish": false,
       "ignoreVersion": false
     },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "eslint",
-        "infile": "CHANGELOG.md",
-        "header": "# Changelog"
-      }
+    "hooks": {
+      "after:bump": "npx auto-changelog -p --hide-credit"
     }
   },
   "jest": {
