--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -60,8 +60,7 @@ jobs:
           commit-message: 'chore(release): v${{ steps.package-version.outputs.current-version}}'
           title: '[Release] v${{ steps.package-version.outputs.current-version}}'
           body: |
-            ## Release notes:
-            ${{ steps.extract-release-notes.outputs.release_notes }}
+            Release notes for this release found in (CHANGELOG.md)[./CHANGELOG.md]
           labels: |
             release
             automated pr
