--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@obolnetwork/obol-sdk",
-  "version": "1.0.13",
+  "version": "1.0.12",
   "description": "A package for creating Distributed Validators using the Obol API.",
   "bugs": {
     "url": "https://github.com/obolnetwork/obol-sdk/issues"
@@ -98,7 +98,7 @@
       "ignoreVersion": false
     },
     "hooks": {
-      "after:bump": "npx auto-changelog -p --hide-credit"
+      "after:bump": "npx auto-changelog -p --hide-credit --stdout"
     }
   },
   "jest": {
