--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -56,7 +56,7 @@ jobs:
           commit-message: 'chore(release): v${{ steps.package-version.outputs.current-version}}'
           title: '[Release] v${{ steps.package-version.outputs.current-version}}'
           body: |
-            Release notes for this release found in (CHANGELOG.md)[./CHANGELOG.md]
+            Release notes for this release found in [CHANGELOG.md](https://github.com/ObolNetwork/obol-sdk/blob/release/CHANGELOG.md)
           labels: |
             release
             automated pr
