--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
       "ignoreVersion": false
     },
     "hooks": {
-      "after:bump": "npx auto-changelog -p --hide-credit --stdout"
+      "after:bump": "npx auto-changelog -p --hide-credit"
     }
   },
   "jest": {
