--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   ],
   "release-it": {
     "git": {
-      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs",
+      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/main/templates/keepachangelog.hbs",
       "commitMessage": "chore(release): v${version}",
       "push": true,
       "commit": true,
@@ -98,7 +98,7 @@
       "ignoreVersion": false
     },
     "hooks": {
-      "after:bump": "npx auto-changelog -p --hide-credit"
+      "after:bump": "npx auto-changelog -p --hide-credit --template https://raw.githubusercontent.com/release-it/release-it/main/templates/keepachangelog.hbs"
     }
   },
   "jest": {
