--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^8.0.1",
+    "@release-it/keep-a-changelog": "^5.0.0",
     "@types/elliptic": "^6.4.18",
     "@types/jest": "^28.1.8",
     "@types/node": "^20.2.5",
@@ -81,7 +83,6 @@
   ],
   "release-it": {
     "git": {
-      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/main/templates/keepachangelog.hbs",
       "commitMessage": "chore(release): v${version}",
       "push": true,
       "commit": true,
@@ -97,8 +98,12 @@
       "publish": false,
       "ignoreVersion": false
     },
-    "hooks": {
-      "after:bump": "npx auto-changelog -p --hide-credit --template https://raw.githubusercontent.com/release-it/release-it/main/templates/keepachangelog.hbs"
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular",
+        "infile": "CHANGELOG.md",
+        "header": "# Changelog"
+      }
     }
   },
   "jest": {
