--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,26 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Extract release notes
-        id: extract-release-notes
-        uses: ffurrer2/extract-release-notes@v2
+      - name: Install SDK dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Check eslint rules
+        run: yarn run lint-ci
+
+      - name: Build SDK
+        run: yarn run build
+
+      - name: Run unit tests
+        run: yarn run test
+      
+      - name: Install e2e dependencies
+        working-directory: ./test/sdk-package-test
+        run: yarn install --frozen-lockfile
+
+      - name: Build e2e
+        working-directory: ./test/sdk-package-test
+        run: yarn run build
+
+      - name: Run e2e tests
+        working-directory: ./test/sdk-package-test
+        run: yarn run test:e2e
