--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "npm-run-all build:clean compile",
     "test": "jest ./test/methods.test.ts",
     "generate-typedoc": "typedoc",
+    "npm:publish": "npm publish --tag latest",
     "release": "release-it",
     "release:dry": "release-it --dry-run --no-npm",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
