--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@chainsafe/discv5": "^0.5.1",
     "@chainsafe/ssz": "^0.14.0",
     "@metamask/eth-sig-util": "^7.0.1",
+    "@types/pdf-parse": "^1.1.4",
     "ajv": "^8.12.0",
     "cross-fetch": "^3.1.5",
     "elliptic": "^6.5.4",
@@ -51,6 +52,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "ethers": "^6.4.0",
     "nock": "^13.5.3",
+    "pdf-parse": "^1.1.1",
     "release-it": "^17.1.1",
     "semver": "^7.6.0",
     "typescript-eslint": "^7.1.0",
