fix spelling mistakes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Check eslint rules
         run: yarn run lint-ci
 
+      - name: Prettier
+        run: npm run prettier-ci
+
       - name: Build SDK
         run: yarn run build
 
