--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "npm:publish": "npm publish --tag latest",
     "release": "release-it",
     "release:dry": "release-it --dry-run --no-npm",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint-ci": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "prettier-ci": "prettier --check \"{src,apps,libs,test}/**/*.ts\""
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
+    "lint-ci": "eslint \"{src,test}/**/*.ts\"",
+    "prettier-ci": "prettier --check \"{src,test}/**/*.ts\""
   },
   "main": "./dist/cjs/src/index.js",
   "module": "./dist/esm/src/index.js",
