--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "ethers": "^6.4.0",
+    "ethers": "6.4.0",
     "nock": "^13.5.3",
     "pdf-parse": "^1.1.1",
     "release-it": "^17.1.1",
@@ -63,6 +63,7 @@
     "@types/elliptic": "^6.4.18",
     "@types/jest": "^28.1.8",
     "@types/node": "^20.2.5",
+    "@types/semver": "^7.5.8",
     "@types/uuid": "^9.0.1",
     "eslint": "^8.57.0",
     "jest": "^28.1.3",
