--- a/test/sdk-package-test/.env.template
+++ b/test/sdk-package-test/.env.template
@@ -1,4 +1,7 @@
 # Internal use only
 DEL_AUTH=DEL_AUTH
 PRIVATE_KEY=PRIVATE_KEY
-ALCHEMY_API_KEY=ALCHEMY_API_KEY
+RPC_HOLESKY=RPC_HOLESKY
+RPC_MAINNET=RPC_MAINNET
+RPC_GNOSIS=RPC_GNOSIS
+RPC_SEPOLIA=RPC_SEPOLIA
