--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "ethers": "6.4.0",
+    "ethers": "^6.13.5",
     "nock": "^13.5.3",
     "pdf-parse": "^1.1.1",
     "semver": "^7.6.0",
