--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@safe-global/safe-core-sdk-types": "5.1.0",
     "@types/pdf-parse": "^1.1.4",
     "ajv": "^8.12.0",
+    "ajv-formats": "^3.0.1",
+    "ajv-keywords": "^5.1.0",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.4.7",
     "elliptic": "^6.5.4",
