Add exit verification to the SDK

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "skipLibCheck": true,
     "moduleResolution":"node",
   },
-  "exclude": ["node_modules", "dist", "test/sdk-package-test"]
+  "exclude": ["node_modules", "dist", "test/sdk-package"]
 }
