Exit sdk commands (#120)
* Add exit verification to the SDK

* fix tests and clean branch

* fix sonar issues

* fix complexity

* fix coderabbit suggestions

* Update src/exits/verificationHelpers.ts

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Signed-off-by: Luke Hackett <luke@obol.tech>

* run prettier

* add catches

* run prettier

* update commands to work

* remove unused func

* Update src/exits/exit.ts

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Signed-off-by: Luke Hackett <luke@obol.tech>

* Update src/exits/exit.ts

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Signed-off-by: Luke Hackett <luke@obol.tech>

* remove innecessary code

* add docs

* remove try/catch

* add types

---------

Signed-off-by: Luke Hackett <luke@obol.tech>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json",
     "build:clean": "rm -rf ./dist",
     "build": "npm-run-all build:clean compile",
-    "test": "jest ./test/*.test.ts",
+    "test": "jest test/**/*.spec.ts --testPathIgnorePatterns=test/sdk-package/",
     "generate-typedoc": "typedoc",
     "npm:publish": "npm publish --tag latest",
     "release": "release-it",
@@ -130,7 +130,7 @@
       "^bn.js$": "<rootDir>/node_modules/bn.js",
       "^asn1.js$": "<rootDir>/node_modules/asn1.js",
       "^hash.js$": "<rootDir>/node_modules/hash.js",
-      "(.+)\\.js": "$1"
+      "^(\\.\\.?\\/.+)\\.js$": "$1"
     },
     "extensionsToTreatAsEsm": [
       ".ts"
