--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -40,7 +40,7 @@ jobs:
         run: yarn run release $TYPE_ARG --ci --verbose --no-git.push --no-git.commit --no-git.tag --no-github
       
       - name: Update e2e dependencies
-        working-directory: ./test/sdk-package-test
+        working-directory: ./test/sdk-package
         run: yarn upgrade
 
       - name: Show git status
