Hanan/ovm methods (#126)
* first version of deployOVM+SplitV2 method

* add raf to recipients

* total split with ovm

* improve some functions

* fix comments

* add tests

* some cleaning

* fix path in test file

* fix tests

* update test percent allocations

* expect split owner address

* add default for splitOwnerAddress

* fix tests and use walletClient in splits sdk

* remove not needed comments

* reflect rabbitcode comments

* fix lint issues

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@0xsplits/splits-sdk": "^5.1.0",
     "@chainsafe/bls": "6.0.3",
     "@chainsafe/blst": "^0.2.9",
     "@chainsafe/discv5": "^0.5.1",
@@ -63,7 +64,8 @@
     "pdf-parse": "^1.1.1",
     "semver": "^7.6.0",
     "typescript-eslint": "^7.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "viem": "^2.31.4"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^8.0.1",
