--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@0xsplits/splits-sdk": "^5.1.0",
     "@chainsafe/bls": "6.0.3",
     "@chainsafe/blst": "^0.2.9",
     "@chainsafe/discv5": "^0.5.1",
@@ -64,8 +63,7 @@
     "pdf-parse": "^1.1.1",
     "semver": "^7.6.0",
     "typescript-eslint": "^7.1.0",
-    "uuid": "^9.0.0",
-    "viem": "^2.31.4"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^8.0.1",
