--- a/.github/workflows/build-deploy-obol-sdk.yml
+++ b/.github/workflows/build-deploy-obol-sdk.yml
@@ -63,4 +63,5 @@ jobs:
           RPC_MAINNET: ${{ secrets.RPC_MAINNET }}
           RPC_GNOSIS: ${{ secrets.RPC_GNOSIS }}
           RPC_SEPOLIA: ${{ secrets.RPC_SEPOLIA }}
+          RPC_HOODI: ${{ secrets.RPC_HOODI }}
           HUSKY: 0
