--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "Ethereum"
   ],
   "scripts": {
-    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json",
     "build:clean": "rm -rf ./dist",
-    "build": "npm-run-all build:clean compile",
+    "build": "npm-run-all build:clean build:tsup",
+    "build:tsup": "tsup && tsc -b ./tsconfig.types.json",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest test/**/*.spec.ts --testPathIgnorePatterns=test/sdk-package/",
     "generate-typedoc": "typedoc",
     "npm:publish": "npm publish --tag latest",
@@ -61,7 +61,7 @@
   "devDependencies": {
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/elliptic": "^6.4.18",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^24.5.2",
     "@types/pdf-parse": "^1.1.5",
     "@types/semver": "^7.7.1",
@@ -72,14 +72,14 @@
     "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-promise": "^7.2.1",
     "husky": "^9.1.7",
-    "jest": "^30.2.0",
+    "jest": "^29.7.0",
     "lint-staged": "^16.2.3",
     "msw": "^2.11.3",
     "nock": "^14.0.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "release-it": "^19.0.5",
-    "ts-jest": "^29.4.4",
+    "ts-jest": "^29.1.5",
     "tsup": "^8.5.0",
     "typedoc": "^0.28.13",
     "typedoc-plugin-markdown": "^4.9.0",
@@ -157,6 +157,7 @@
     "roots": [
       "<rootDir>/src",
       "<rootDir>/test"
-    ]
+    ],
+    "maxWorkers": "50%"
   }
 }
