--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:clean": "rm -rf ./dist",
     "build": "npm-run-all build:clean build:tsup",
     "build:tsup": "tsup && tsc -b ./tsconfig.types.json",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest test/**/methods.spec.ts --testPathIgnorePatterns=test/sdk-package/",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest test/**/**.spec.ts --testPathIgnorePatterns=test/sdk-package/",
     "generate-typedoc": "typedoc",
     "npm:publish": "npm publish --tag latest",
     "release": "release-it",
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@chainsafe/bls": "6.0.3",
-    "@chainsafe/blst": "^2.2.0",
+    "@chainsafe/blst": "^0.2.0",
     "@chainsafe/enr": "^5.0.0",
     "@chainsafe/ssz": "^0.14.0",
     "@metamask/eth-sig-util": "^8.2.0",
@@ -66,11 +66,13 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/semver": "^7.7.1",
     "@types/uuid": "^9.0.1",
-    "eslint": "^9.36.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "8.57.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-n": "^17.23.1",
-    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^16.2.3",
@@ -83,8 +85,7 @@
     "tsup": "^8.5.0",
     "typedoc": "^0.28.13",
     "typedoc-plugin-markdown": "^4.9.0",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.44.1"
+    "typescript": "~5.9.2"
   },
   "engines": {
     "node": ">= 16"
