--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "release": "release-it",
     "release:dry": "release-it --dry-run --no-npm",
     "lint": "eslint \"{src}/**/*.{js,ts}\" --fix",
-    "lint-ci": "eslint \"{src}/**/*.{js,ts}\"",
-    "prettier-ci": "prettier --check \"{src}/**/*.{js,ts}\"",
+    "lint-ci": "eslint ./src --ext .ts,.js",
+    "prettier-ci": "prettier --check ./src --ext .ts,.js",
     "prettier": "prettier --write \"{src}/**/*.{js,ts}\"",
     "docs": "typedoc"
   },
