Hanan/browser bundler config (#157)
* add browser config and a small web app for testing

* add more external dependencies to bundler

* complex fix

* simpler config

* add real test in nextjs app

* remove dependencies that wil be auto installed with sdk dependencies

* update testing lock

* ignore test from eslint

* add .eslingignore

* update lint scripts

* add .eslintignire

* another trial to fix CI lint

* update readme in testing app

* remove false sideeffects line from package.json

--- a/package.json
+++ b/package.json
@@ -21,15 +21,30 @@
     "npm:publish:next": "npm publish --tag next",
     "release": "release-it",
     "release:dry": "release-it --dry-run --no-npm",
-    "lint": "eslint \"{src,test}/**/*.{js,ts}\" --fix",
-    "lint-ci": "eslint \"{src,test}/**/*.{js,ts}\"",
-    "prettier-ci": "prettier --check \"{src,test}/**/*.{js,ts}\"",
-    "prettier": "prettier --write \"{src,test}/**/*.{js,ts}\"",
+    "lint": "eslint \"{src}/**/*.{js,ts}\" --fix",
+    "lint-ci": "eslint ./src --ext .ts,.js",
+    "prettier-ci": "prettier --check ./src --ext .ts,.js",
+    "prettier": "prettier --write \"{src}/**/*.{js,ts}\"",
     "docs": "typedoc"
   },
   "main": "./dist/cjs/src/index.js",
   "module": "./dist/esm/src/index.js",
+  "browser": "./dist/browser/src/index.js",
   "typings": "./dist/types/src/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/src/index.d.ts",
+      "browser": {
+        "import": "./dist/browser/src/index.js",
+        "default": "./dist/browser/src/index.js"
+      },
+      "node": {
+        "import": "./dist/esm/src/index.js",
+        "require": "./dist/cjs/src/index.js"
+      },
+      "default": "./dist/esm/src/index.js"
+    }
+  },
   "author": "Obol Labs (https://obol.org)",
   "repository": {
     "type": "git",
