--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "strict": true,
     "skipLibCheck": true,
     "moduleResolution":"node",
+    "baseUrl": "./",
+    "paths": {
+      "@safe-global/types-kit/types": ["node_modules/@safe-global/types-kit/dist/src/types.d.ts"]
+    }
   },
   "exclude": ["node_modules", "dist", "test/sdk-package", "test/nextjs-test-app"]
 }
